crates/plotnik-tests/tests/02-parser/recovery_unexpected/quantifier_after_capture.txt
Q = (a) @x*
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:1:11
  |
1 | Q = (a) @x*
  |           ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
